stable/k8s_yaml/test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  namespace: website-system
spec:
  containers:
  - name: frontend
    image: pear1798/test_react:stable
    ports:
    - containerPort: 3000

#docker run  -it -v /home/ubuntu/Desktop/test:/test --rm node:20 bash
#npm i
# npm run container
