stable/k8s_yaml/backend.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: website-system

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: website-system
  labels:
    type: backend-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: pear1798/backend:stableCpu
        ports:
        - containerPort: 5000
        command: ["python3"]
        args: ["backend.py"]
        

---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: website-system
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
