stable/k8s_yaml/mlflow.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mlflow-system

---
apiVersion: v1
kind: Pod
metadata:
  labels:
    mlflow-type: server
  name: mlflow
  namespace: mlflow-system
spec:
  volumes:
    - name: task-pv-storage
      persistentVolumeClaim:
        claimName: mlflow-pvc
  containers:
  - command: ["mlflow"]
    args: ["server", "--host=0.0.0.0", --port=8080, "--backend-store-uri=sqlite:///tmp/mlflow/mlflow.db"]
    image: ghcr.io/mlflow/mlflow
    name: mlflow
    ports:
    - containerPort: 8080
    volumeMounts:
        - mountPath: /tmp/mlflow
          name: task-pv-storage

  restartPolicy: Always

#dashboard-mlflow
---
apiVersion: v1
kind: Service
metadata:
  name: mlflow-dashboard-svc
  namespace: mlflow-system
spec:
  type: NodePort
  selector:
    mlflow-type: server
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    name: dashboard
    nodePort: 30001

#mlflow-pv
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow-ingress
  namespace: mlflow-system
spec:
  ingressClassName: nginx
  rules:
  - host: "mlflow-dashboard.localdev.me" #"mlflow-dashboard.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mlflow-dashboard-svc
            port:
              number: 8080
