stable/k8s_yaml/ray.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ray

---
apiVersion: v1
kind: Pod
metadata:
  name: ray-head
  namespace: ray
  labels:
    ray-type: head
spec:
  containers:
  - name: head
    image: pear1798/ray-test:cpuV3
    command: ["ray"]
    args: ["start", "--block", "--head", "--dashboard-host=0.0.0.0", "--num-cpus=6", "--memory=6000000000"]
    ports:
    - containerPort: 6379
    - containerPort: 8265
    resources:
      requests:
        memory: "6G"
        cpu: "6"
      limits:
        memory: "6G"
        cpu: "6"
  restartPolicy: Always

  
#dashboard
---
apiVersion: v1
kind: Service
metadata:
  name: ray-dashboard-svc
  namespace: ray
spec:
  selector:
    ray-type: head
  ports:
  - protocol: TCP
    port: 8265
    targetPort: 8265
    name: dashboard

   
#head-register 
---
apiVersion: v1
kind: Service
metadata:
  name: ray-head-svc
  namespace: ray
spec:
  selector:
    ray-type: head
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
    name: register


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ray-worker
  namespace: ray
spec:
  replicas: 1
  selector:
    matchLabels:
      type: worker
  template:
    metadata:
      labels:
        type: worker
    spec:
      containers:
      - name: ray-worker
        image: pear1798/ray-test:cpuV3
        command: ["ray"]
        args: ["start", "--address=ray-head-svc:6379", "--block", "--num-cpus=4", "--memory=6000000000"]
        resources:
          requests:
            memory: "6G"
            cpu: "4"
          limits:
            memory: "6G"
            cpu: "4"
      
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ray-ingress
  namespace: ray
spec:
  ingressClassName: nginx
  rules:
  - host: "ray-dashboard.localdev.me"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ray-dashboard-svc
            port:
              number: 8265
